cabal-version:      3.0
name:               pew
version:            0.1.0.0
synopsis:

description: Backend agnostic structured logger
author:             Danil Berestov
maintainer:         goosedb@yandex.ru

library
	exposed-modules:  Pew.Severity, 
										Pew.Logger, 
										Pew.Logger.Config, 
										Pew.Logger.Output.Json, 
										Pew.Logger.Output.Console,
										Pew.Logger.Implicit
	build-depends:    base ^>=4.16.4.0, bytestring, time, containers, aeson, text, ansi-terminal
	hs-source-dirs:   src
	default-language: Haskell2010
	ghc-options: -Wall
	default-extensions:
		ConstraintKinds,
		ImplicitParams,
		RankNTypes,
		GADTs,
		RecordWildCards,
		LambdaCase,
		OverloadedStrings,
		BlockArguments,
		NamedFieldPuns,

