cabal-version: 3.0
name:          pew
version:       0.1.0.0
synopsis:
description:   Backend agnostic structured logger
author:        Danil Berestov
maintainer:    goosedb@yandex.ru

library
  -- cabal-fmt: expand src/
  exposed-modules:
    Pew.Logger.General
    Pew.Logger.Interface.Implicit
    Pew.Logger.Interface.Monad
    Pew.QuickStart.Backend.Async
    Pew.QuickStart.Backend.Pure
    Pew.QuickStart.Interface.Implicit
    Pew.QuickStart.Interface.Monad
    Pew.QuickStart.Output.Console
    Pew.QuickStart.Output.Json
    Pew.Severity

  build-depends:
    , aeson
    , ansi-terminal
    , base
    , bytestring
    , containers
    , mtl
    , stm
    , text
    , text-builder-linear
    , time

  hs-source-dirs:     src
  default-language:   GHC2021
  ghc-options:        -Wall
  default-extensions:
    BlockArguments
    ConstraintKinds
    GADTs
    ImplicitParams
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards

test-suite pew-test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  default-language: GHC2021
  ghc-options:        -threaded
  hs-source-dirs:   test
  build-depends:
    , aeson
    , base
    , text 
    , bytestring
    , containers
    , hspec
    , hspec-expectations
    , mtl
    , pew
    , time
